[gd_scene load_steps=13 format=3 uid="uid://darq8ocldvh5a"]

[ext_resource type="Script" path="res://man/man.gd" id="1_352em"]
[ext_resource type="Texture2D" uid="uid://c5665wjan5n2v" path="res://man/lower.png" id="2_e3kca"]
[ext_resource type="Texture2D" uid="uid://b6tixluwfc52p" path="res://man/kicking_leg.png" id="2_uqefx"]
[ext_resource type="Texture2D" uid="uid://p668kh236j6u" path="res://man/upper.png" id="4_ynupq"]
[ext_resource type="Texture2D" uid="uid://rxng7nc84oit" path="res://man/grin.png" id="5_f0kyj"]
[ext_resource type="PackedScene" uid="uid://778cs5wasnjt" path="res://man/eye.tscn" id="5_jdjey"]
[ext_resource type="Texture2D" uid="uid://lfkeld2jci5t" path="res://man/ooh.png" id="6_20gjt"]
[ext_resource type="Texture2D" uid="uid://c1qypehm7is4i" path="res://man/disappoint.png" id="8_xaukw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu1ok"]
size = Vector2(123, 324)

[sub_resource type="CircleShape2D" id="CircleShape2D_rfg6y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2fkcw"]
size = Vector2(70, 274)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ommkx"]
size = Vector2(126, 34)

[node name="Man" type="StaticBody2D"]
position = Vector2(-20, -289)
script = ExtResource("1_352em")

[node name="TorsoCollision" type="CollisionShape2D" parent="."]
position = Vector2(27.5, -135)
shape = SubResource("RectangleShape2D_wu1ok")

[node name="HipJoint" type="PinJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../Leg")

[node name="RightLegLimiter" type="StaticBody2D" parent="."]
position = Vector2(135, -36)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightLegLimiter"]
shape = SubResource("CircleShape2D_rfg6y")
metadata/_edit_lock_ = true

[node name="LeftLegLimiter" type="StaticBody2D" parent="."]
position = Vector2(-91, 17)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftLegLimiter"]
shape = SubResource("CircleShape2D_rfg6y")
metadata/_edit_lock_ = true

[node name="Lower" type="Sprite2D" parent="."]
position = Vector2(7, 139)
texture = ExtResource("2_e3kca")

[node name="Leg" type="RigidBody2D" parent="."]
collision_mask = 7
mass = 12.0

[node name="KickingLeg" type="Sprite2D" parent="Leg"]
position = Vector2(31, 137)
texture = ExtResource("2_uqefx")

[node name="LegCollision" type="CollisionShape2D" parent="Leg"]
position = Vector2(14, 125)
shape = SubResource("RectangleShape2D_2fkcw")

[node name="FootCollision" type="CollisionShape2D" parent="Leg"]
position = Vector2(32, 270)
shape = SubResource("RectangleShape2D_ommkx")

[node name="Upper" type="Sprite2D" parent="."]
position = Vector2(38, -136)
texture = ExtResource("4_ynupq")

[node name="LeftEye" parent="." instance=ExtResource("5_jdjey")]
position = Vector2(71, -235)

[node name="RightEye" parent="." instance=ExtResource("5_jdjey")]
position = Vector2(25, -239)

[node name="MouthGrin" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(35, -205)
texture = ExtResource("5_f0kyj")

[node name="MouthOoh" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(57, -202)
texture = ExtResource("6_20gjt")

[node name="MouthDisappoint" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(40, -200)
texture = ExtResource("8_xaukw")
